--- a/My_Practice_Algorithms_April_2016/04.Dynamic_Programming_Homework/10.ZigZagMatrix/10.ZigZagMatrix.csproj
+++ b/My_Practice_Algorithms_April_2016/04.Dynamic_Programming_Homework/10.ZigZagMatrix/10.ZigZagMatrix.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7E969721-E03E-450E-BB5C-0C236BA69A8F}</ProjectGuid>
+    <ProjectGuid>{5D7B9812-6549-40C7-B7F4-0A5924696DF8}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_10.Test</RootNamespace>
-    <AssemblyName>10.Test</AssemblyName>
+    <RootNamespace>_10.ZigZagMatrix</RootNamespace>
+    <AssemblyName>10.ZigZagMatrix</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="ZigZagMatrix.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
