Sorting algorithms implementations.

--- a/03.My_Practice_Algorithms_April_2016/03.Sorting_And_Searching_Algorithms_Lab/Sortable-Collection/Sortable-Collection.csproj
+++ b/03.My_Practice_Algorithms_April_2016/03.Sorting_And_Searching_Algorithms_Lab/Sortable-Collection/Sortable-Collection.csproj
@@ -9,9 +9,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Sortable_Collection</RootNamespace>
     <AssemblyName>01.Students-And-Courses</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
