--- a/03.My_Practice_Algorithms_April_2016/04.Dynamic_Programming_Homework/10.ZigZagMatrix/10.ZigZagMatrix.csproj
+++ b/03.My_Practice_Algorithms_April_2016/04.Dynamic_Programming_Homework/10.ZigZagMatrix/10.ZigZagMatrix.csproj
@@ -9,9 +9,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>_10.ZigZagMatrix</RootNamespace>
     <AssemblyName>10.ZigZagMatrix</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
