--- a/03.My_Practice_Algorithms_April_2016/04.Dynamic_Programming_Demos/MoveDownRight/3. MoveDownRight.csproj
+++ b/03.My_Practice_Algorithms_April_2016/04.Dynamic_Programming_Demos/MoveDownRight/3. MoveDownRight.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{05B98452-E394-47D9-94A3-C36B0BEFA88D}</ProjectGuid>
+    <ProjectGuid>{70FCAA5F-D4C5-40EC-B32F-765B092D6F32}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Knapsack_Problem</RootNamespace>
-    <AssemblyName>Knapsack-Problem</AssemblyName>
+    <RootNamespace>MoveDownRight</RootNamespace>
+    <AssemblyName>MoveDownRight</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -44,8 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Item.cs" />
-    <Compile Include="Knapsack.cs" />
+    <Compile Include="MoveDownRight.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
