Added cookies implementation in Web server.

--- a/00.My_Practice_Courses/07.C#_Web_Development_Basics/08.Hand-made_HTTP_Server/WebServer/WebServer/WebServer.csproj
+++ b/00.My_Practice_Courses/07.C#_Web_Development_Basics/08.Hand-made_HTTP_Server/WebServer/WebServer/WebServer.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Server\Http\HttpRequest.cs~RF2030e918.TMP" />
+  </ItemGroup>
+
 </Project>
