--- a/00.My_Practice_Courses/07.C#_Web_Development_Basics/00.NancySelfHostingService/NancySelfHostService/OwinSelfHost/OwinSelfHost.csproj
+++ b/00.My_Practice_Courses/07.C#_Web_Development_Basics/00.NancySelfHostingService/NancySelfHostService/OwinSelfHost/OwinSelfHost.csproj
@@ -57,6 +57,10 @@
       <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Owin.Limits, Version=1.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Owin.Limits.1.0.1.0\lib\net45\Owin.Limits.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
