--- a/00.My_Practice_Courses/07.C#_Web_Development_Basics/00.NancySelfHostingService/NancySelfHostService/OwinSelfHost/packages.config
+++ b/00.My_Practice_Courses/07.C#_Web_Development_Basics/00.NancySelfHostingService/NancySelfHostService/OwinSelfHost/packages.config
@@ -6,4 +6,5 @@
   <package id="Nancy" version="1.4.5" targetFramework="net46" />
   <package id="Nancy.Owin" version="1.4.1" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net46" />
+  <package id="Owin.Limits" version="1.0.1.0" targetFramework="net46" />
 </packages>
